set up javascript for create list page

--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        {% load staticfiles %}
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
         <!-- Optional theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-
+        {% block css %}{% endblock %}
+        {% block js %}{% endblock %}
+        <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <div id="content">
-            {% block content %}{% endblock %}
+        {% load staticfiles %}
+        <div class="container">
+            <div id="content">
+                {% block content %}{% endblock %}
+            </div>
         </div>
     </body>
 </html>
