--- a/lists/templates/lists/new.html
+++ b/lists/templates/lists/new.html
@@ -3,44 +3,25 @@
 {% block css %}
     <link rel="stylesheet" href="{% static "lists/main.css" %}">
 {% endblock %}
-{% block js %}
-    <script src="{% static "lists/new.js" %}"></script>
-{% endblock %}
 {% block content %}
 <div class="row">
-<div class="col-xs-0 col-sm-1"></div>
-<div class="col-xs-12 col-sm-10" id="listBox">
-    <div class="row">
-        <div class="col-xs-6" id="options">
-            <div class="panel panel-primary">
-                <div class="panel-heading">Options</div>
-                    <div class="panel-body">
-                   {% for item in item_list %}
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" value="{{ item.id }}" data-category="{{ item.category }}" onclick="addToList('{{ item }}', {{ item.id }}, {{ item.price }})">{{ item }}
-                            </label>
-                        </div>
-                   {% endfor %}
-               </div>
-           </div>
-        </div>
-        <div class="col-xs-6" id="shoppingList">
-            <div class="panel panel-primary">
-                <div class="panel-heading">List <span class="badge pull-right" id="total">$0</span></div>
-                <div class="panel-body">
-                    <!--<form action="{% url 'item:update' 0 %}" method="post">-->
-                    <form action="#" method="post">
-                       {% csrf_token %}
-                       <ul>
-                           <div class="listItems"></div>
-                       </ul>
-                       <input type="submit" value="Save" class="btn btn-primary bottom right"/>
-                    </form>
-                </div>
+    <div class="col-xs-2 col-md-3"></div>
+    <div class="col-xs-8 col-md-6" id="listBox">
+        <div class="panel panel-primary">
+            <div class="panel-heading">List Information</div>
+            <div class="panel-body">
+                <form action="{% url 'lists:create' %}" method="post">                <form action="#" method="post">
+                   {% csrf_token %}
+                   <div class="form-group">
+                       <label class="col-sm-2 control-label">Name:</label>
+                       <div class="col-sm-10">
+                           <input type="text" name="name" class="form-control" />
+                       </div>
+                   </div>
+                   <input type="submit" value="Save" class="btn btn-primary bottom right"/>
+                </form>
             </div>
         </div>
     </div>
-</div>
 </div>
 {% endblock %}
