--- a/lists/templates/lists/update.html
+++ b/lists/templates/lists/update.html
@@ -8,6 +8,7 @@
     <script>
         window.onload = function() {
             {% for item in list.items.all %}
+            console.log("{{ item }}");
             addToList("{{ item }}", {{ item.id }}, {{ item.price }});
             {% endfor %}
         };
@@ -20,7 +21,19 @@
     <div class="row">
         <div class="col-xs-6" id="options">
             <div class="panel panel-primary">
-                <div class="panel-heading">Options</div>
+                <div class="panel-heading">
+                    Options
+                    <select id="store" class="pull-right" style="color: blue;">
+                        {% for store in store_list %}
+                            <option id="{{ store.id }}">{{ store }}</option>
+                        {% endfor %}
+                    </select>
+                    <select id="category" class="pull-right" style="color: blue;">
+                        {% for category in category_list %}
+                            <option id="{{ category.id }}">{{ category }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
                     <div class="panel-body">
                    {% for item in item_list %}
                         <div class="checkbox">
